fix solar array not showing

--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -542,7 +542,7 @@ ul.why li {
   top: 0;
   width: 100%;
   height: 100%;
-  z-index: -3;
+  z-index: 30;
 }
 
 .form-input:placeholder-shown {
